--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "mehn-stack-boilerplate",
+  "name": "GameJS",
   "version": "1.0.0",
-  "description": "Boilerplate for Mongo, Express, Handlebars and Node",
+  "description": "Simple Javascript game with basic html and css",
   "main": "server.js",
   "scripts": {
+    "dev": "parcel public/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build public/src/index.js",
     "start": "node server.js"
   },
   "author": "Ian Collares",
@@ -13,6 +15,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "mongoose": "^5.8.5"
+    "mongoose": "^5.8.5",
+    "parcel-bundler": "^1.12.4"
   }
 }
