--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Simple Javascript game with basic html and css",
   "main": "server.js",
   "scripts": {
-    "dev": "parcel public/src/index.js",
+    "dev": "parcel public/src/game.js public/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "parcel build public/src/index.js",
+    "build": "parcel build public/src/game.js public/src/index.js",
     "start": "node server.js"
   },
   "author": "Ian Collares",
